Add "Auto" Mode to Bingo (Admin Side), Fix Errors, Adjust Live Game UI for organization purposes.
